--- a/ALYASI/index.html
+++ b/ALYASI/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+  <!-- git add . -->
+<!-- git commit -m "salim 2" -->
+<!-- git push  -->
+ <!-- main -->
+
+
+ 
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" style="image/png" href="dr_ioss.png" />
-    <title>     ios  دكتور</title>
+        <link rel="icon" style="image/png" href="salim.png"/>
+    <title>سالم الحجري</title>
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,66 +21,55 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/fail/Application.css">
+     <link rel="stylesheet" href="/fail/Application.css">
+
 
 </head>
 
 <body>
     <section class="main">
         <div class="header">
-            <img src="dr_ioss.png" class="imageshadow"><!--صورة brand-->
-            <h1 class="h1">   ios  دكتور</h1><!--اسم brand-->
+            <img src="salim.png" class="imageshadow"><!--صورة brand-->
+            <h1 class="h1">  سالم الحجري</h1><!--اسم brand-->
         </div>
         <div class="text">
- 
-            <a class="Instagram" href="https://www.instagram.com/dr__ios">
+
+            <a class="Instagram" href="https://instagram.com/alyasi_1985?igshid=YmMyMTA2M2Y=">
                 <span style="margin-right: 1rem;">Instagram</span>
                 <i class="fa-brands fa-instagram fa-2xl"></i>
             </a>
-
-            <a class="FacicBook" href="https://t.me/Dr_ioss">
-                <span style="margin-right: 1rem;">Telegram</span>
-                <i class="fa-brands fa-telegram fa-2xl"></i>
+            <a class="WhatsApp" href="https://wa.me/96898881054">
+                <span style="margin-right: 1rem;">WhatsApp</span>
+                <i class="fa-brands fa-whatsapp fa-2xl "></i>
             </a>
-
-           
-            <a class="Snapchat" href="https://www.snapchat.com/add/dr_ioss">
+            <a class="TikTok" href="https://www.tiktok.com/@alyasi_1985?_t=8nRhh4TobZJ&_r=1">
+                <span style="margin-right: 1rem;">TikTok</span>
+                <i class="fa-brands fa-tiktok fa-2xl"></i>
+            </a>
+            <a class="Snapchat" href="https://snapchat.com/t/P8TUjDdb">
                 <span style="margin-right: 1rem;">Snapchat</span>
                 <i class="fa-brands fa-snapchat fa-2xl"></i>
             </a>
-            <a class="YouTube" href="https://youtube.com/@dr_ioss">
+            <a class="YouTube" href="https://www.youtube.com/channel/UCNKwfq6LpU-Js_whq5xzcmQ">
                 <span style="margin-right: 1rem;">YouTube</span>
-                <i class="fa-brands fa-youtube fa-2xl"></i>
-
-                <a class="Twitter" href="https://twitter.com/Dr___IOS/">
-                    <span style="margin-right: 1rem; font-size: 32px;">𝕏</span>
-                </a>
-                <a class="FacicBook" href="https://store-ios.com">
-                    <span style="margin-right: 1rem;">متجر دكتور ios لتطبيقات بلس</span>
-                    <i class="fa-brands fa-app-store-ios fa-2xl"></i>
-                </a>
-                <a class="WhatsApp" href="https://chat.whatsapp.com/C4o3NtOt5Qa9q0Qz508FaZ">
-                    <span style="margin-right: 1rem;">قروب الايفون والجلبريك  </span>
-                    <i class="fa-brands fa-whatsapp fa-2xl "></i>
-                </a>
-                <a class="WhatsApp" href="https://chat.whatsapp.com/E9a2ADuWYeF8GAtKvIdWKS">
-                    <span style="margin-right: 1rem;">قروب الاندرويد</span>
-                    <i class="fa-brands fa-whatsapp fa-2xl "></i>
-                </a>
+             <i class="fa-brands fa-youtube fa-2xl"></i>
+            </a> 
+                  <a class="FacicBook" href="https://www.facebook.com/share/UewPYzqqvrNUwjav/?mibextid=LQQJ4d">
+                <span style="margin-right: 1rem;">FacicBook</span>
+             <i class="fa-brands fa-facebook fa-2xl"></i>
             </a>
-            <a class="WhatsApp" href="https://chat.whatsapp.com/FiwxEJ0PijRBq2CMV2kLRp">
-                <span style="margin-right: 1rem;">  قروب IPA للجلبريك وترولستور</span>
-                <i class="fa-brands fa-whatsapp fa-2xl "></i>
+             <a class="Twitter" href="https://twitter.com/alyasi_1985?lang=ar">
+              <span style="margin-right: 1rem; font-size: 32px;">𝕏</span>
             </a>
-            <a class="WhatsApp" href="https://chat.whatsapp.com/CkfOzDFoqFQ2aMXdHwFrJF">
-                <span style="margin-right: 1rem;">قروب خلفيات الايفون</span>
+                <a class="WhatsApp" href="https://wa.me/96871568883">
+                <span style="margin-right: 1rem;">WA Business</span>
                 <i class="fa-brands fa-whatsapp fa-2xl "></i>
             </a>
         </div>
-        </div>
+        </div> 
 
-    </section>
-
+    </section> 
+ 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var links = document.querySelectorAll('.text a');
@@ -111,6 +107,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-<script src="fail/sparkline.js"></script>
+<script src="/fail/sparkline.js"></script>
 
 </html>
+
+
+
