--- a/Reem/index.html
+++ b/Reem/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" style="image/png" href="logo.png"/>
+        <link rel="icon" style="image/png" href="Reem.png"/>
     <title>ريم الشمري</title>
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -21,8 +21,10 @@
 <body>
     <section class="main">
         <div class="header">
-            <img src="logo.png" class="imageshadow"><!--صورة brand-->
-            <h1 class="h1">ريم الشمري</h1><!--اسم brand-->
+            <img src="Reem.png" class="imageshadow"><!--صورة brand-->
+            <h1 class="h1"> 
+                ريم الشمري
+            </h1><!--اسم brand-->
         </div>
         <div class="text">
 
