--- a/index.html
+++ b/index.html
@@ -1,115 +1,143 @@
 <!DOCTYPE html>
-  <!-- git add . -->
+<html lang="ar">
+<!-- git add . -->
 <!-- git commit -m "salim 2" -->
 <!-- git push  -->
- <!-- main -->
-
-
- 
-<html lang="en">
+<!-- main -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" style="image/png" href="logo.png"/>
-    <title>سالم الحجري</title>
-    <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-     <link rel="stylesheet" href="/fail/Application.css">
 
-
+    <link rel="stylesheet" href="Application.css">
+    <title> ALYASI SOFTWARE</title>
+    <link rel="icon" style="image/png" href="alyasi.png" />
 </head>
 
 <body>
+
+ 
+
     <section class="main">
-        <div class="header">
-            <img src="logo.png" class="imageshadow"><!--صورة brand-->
-            <h1 class="h1">  سالم الحجري</h1><!--اسم brand-->
+        <div class="imagA">
+            <img src="alyasi.png" alt="">
         </div>
         <div class="text">
+            <div>
+                <a href="#" class="Title"> ALYASI SOFTWARE </a>
+            </div>
+            <div>
 
-            <a class="Instagram" href="https://instagram.com/alyasi_1985?igshid=YmMyMTA2M2Y=">
-                <span style="margin-right: 1rem;">Instagram</span>
-                <i class="fa-brands fa-instagram fa-2xl"></i>
-            </a>
-            <a class="WhatsApp" href="https://wa.me/96898881054">
-                <span style="margin-right: 1rem;">WhatsApp</span>
-                <i class="fa-brands fa-whatsapp fa-2xl "></i>
-            </a>
-            <a class="TikTok" href="https://www.tiktok.com/@alyasi_1985?_t=8nRhh4TobZJ&_r=1">
-                <span style="margin-right: 1rem;">TikTok</span>
-                <i class="fa-brands fa-tiktok fa-2xl"></i>
-            </a>
-            <a class="Snapchat" href="https://snapchat.com/t/P8TUjDdb">
-                <span style="margin-right: 1rem;">Snapchat</span>
-                <i class="fa-brands fa-snapchat fa-2xl"></i>
-            </a>
-            <a class="YouTube" href="https://www.youtube.com/channel/UCNKwfq6LpU-Js_whq5xzcmQ">
-                <span style="margin-right: 1rem;">YouTube</span>
-             <i class="fa-brands fa-youtube fa-2xl"></i>
-            </a> 
-                  <a class="FacicBook" href="https://www.facebook.com/share/UewPYzqqvrNUwjav/?mibextid=LQQJ4d">
-                <span style="margin-right: 1rem;">FacicBook</span>
-             <i class="fa-brands fa-facebook fa-2xl"></i>
-            </a>
-             <a class="Twitter" href="https://twitter.com/alyasi_1985?lang=ar">
-              <span style="margin-right: 1rem; font-size: 32px;">𝕏</span>
-            </a>
-                <a class="WhatsApp" href="https://wa.me/96871568883">
-                <span style="margin-right: 1rem;">WA Business</span>
-                <i class="fa-brands fa-whatsapp fa-2xl "></i>
-            </a>
+                <p class="mainTEXTP">
+                    خدماتنا البرمحيهمن مميزاتنانحن
+                    <br>
+                    نقدم خدمات برمجية متنوعة تشمل تطوير التطبيقات والمتاجر الإلكترونية والصفحات الشخصية. فريقنا متميز
+                    بالخبرة والاحترافية، مما يضمن تقديم حلول مخصصة وفعالة لكل عملائنا. نهدف إلى تحويل رؤيتكم إلى واقع
+                    ناجح.
+                </p>
+
+            </div>
+            <div class="Communication">
+                <div class="Communication_cart">
+                    <a href="https://www.instagram.com/alyasi_software/?igshid=YmMyMTA2M2Y%3D"> <i
+                            class="fa-brands fa-instagram "></i></a>
+
+                </div>
+                <div class="Communication_cart">
+                    <a href="https://wa.me/96871568883"><i class="fa-brands fa-whatsapp"></i></a>
+
+                </div>
+                <div class="Communication_cart">
+                    <a
+                        href="https://www.facebook.com/people/%D8%A7%D9%84%D9%8A%D8%A7%D8%B3%D9%8A-%D9%84%D9%84%D8%A8%D8%B1%D9%85%D8%AC%D9%8A%D8%A7%D8%AA/pfbid02uGQy6VVVwuXoXRnPCNfx5b3XZCbSaFfZsSUUJ26hj3VmYGX5GMMAWN6jLTPfrABsl/?mibextid=LQQJ4d">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+
+
+                </div>
+            </div>
         </div>
-        </div> 
+        <div class="imagS">
+            <img src="salimw.png" alt="">
+        </div>
+    </section>
+    <section class="cards" id="home">
+        <h2 class="title">اعمالي</h2>
 
-    </section> 
- 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var links = document.querySelectorAll('.text a');
-            var textContainer = document.querySelector('.text');
+        <div class="content">
+            <div class="cart">
+                <div class="url">
+                    <div class="info">
+                        <a href="https://alyasi.store/ALYASI">
+                            <img class="imageshadow" src="/ALYASI/salim.png" alt="Circular Image" />
+                        </a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3> سالم الحجري</h3>
+                </div>
+            </div>
+            <!-- 1 -->
+            <div class="cart">
+                <div class="url">
+                    <div class="info">
+                        <a href="https://alyasi.store//am28lk">
+                            <img class="imageshadow" src="/am28lk/am28lk.png"  alt="Circular Image" />
+                        </a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>اميرة الكون</h3>
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="cart">
+                <div class="url">
+                    <div class="info">
+                        <a href="https://alyasi.store/Reem">
+                            <img class="imageshadow" src="/Reem/Reem.png"  alt="Circular Image" />
+                        </a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3> ريم الشمري </h3>
+                </div>
+            </div>
+           <!-- 3 -->
+            <div class="cart">
+                <div class="url">
+                    <div class="info">
+                        <a href="https://alyasi.store/dr_ioss">
+                            <img class="imageshadow" src="/dr_ioss/dr_ioss.png"  alt="Circular Image" />
+                        </a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>ios دكتور</h3>
+                </div>
+            </div>
+           <!-- 4 -->
+            <div class="cart">
+                <div class="url">
+                    <div class="info">
+                        <a href="https://alyasi.store/AbuHamdan">
+                            <img class="imageshadow" src="/AbuHamdan/AbuHamdan.png"  alt="Circular Image" />
+                        </a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Abu Hamdan </h3>
+                </div>
+            </div>
+            
+        </div>
 
-            // Check if the number of links is greater than 4
-            if (links.length > 4) {
-                // Set overflow to auto
-                textContainer.style.overflowY = 'auto';
-                textContainer.style.overflowX = 'auto';
-
-                // Set the height and width for each link
-                links.forEach(function (link) {
-                    link.style.height = '50px';
-                    link.style.width = '95%';
-                });
-            }
-        });
-
-
-
-
-        document.addEventListener("DOMContentLoaded", function () {
-            var links = document.querySelectorAll('.text a');
-            links.forEach(function (link, index) {
-                setTimeout(function () {
-                    link.style.opacity = '1'; // Set opacity to 1 after delay
-                    link.style.transform = 'translateX(0)'; // Slide link into view from right side
-                }, (index + 1) * 90); // Delay appearance by (index + 1) * 3 seconds
-            });
-        });
-    </script>
+    </section>
+   
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-<script src="/fail/sparkline.js"></script>
-
 </html>
-
-
-
