--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     <section class="cards" id="home">
-        <h2 class="title">اعمالي</h2>
+        <h2 class="title">مستخدمين الخدمة </h2>
 
         <div class="content">
             <div class="cart">
